force-app/main/default/objects/Revenue__c/Revenue__c.object-meta.xml
<CustomObject>
    <description>Stores monthly revenue by platform by type (recurring or professional services) by account</description>
    <label>Revenue</label>
    <nameField>
        <displayFormat>REV-{0}</displayFormat>
        <label>Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>