force-app/main/default/objects/Revenue__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>the account that the revenue is associated with</description>
    <inlineHelpText>the account that the revenue is associated with</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revenue</relationshipLabel>
    <relationshipName>Revenue</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>