force-app/main/default/objects/Revenue__c/fields/ARPU__c.field-meta.xml
<CustomField>
    <fullName>ARPU__c</fullName>
    <description>Average Revenue per Unit (ARPU) = Net Revenue / Billed Units</description>
    <formula>IF (Billed_Units__c = 0, NULL, Net_Revenue__c / Billed_Units__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average Revenue per Unit (ARPU) = Net Revenue / Billed Units</inlineHelpText>
    <label>ARPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>