force-app/main/default/objects/Revenue__c/fields/Billed_Units__c.field-meta.xml
<CustomField>
    <fullName>Billed_Units__c</fullName>
    <description>Number of Billed Units</description>
    <inlineHelpText>Number of Billed Units</inlineHelpText>
    <label>Billed Units</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>