force-app/main/default/objects/Revenue__c/fields/Fiscal_Period__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period__c</fullName>
    <description>Fiscal Period (1 = Oct; 12 = Sept)</description>
    <inlineHelpText>Fiscal Period (1 = Oct; 12 = Sept)</inlineHelpText>
    <label>Fiscal Period</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>