force-app/main/default/objects/Revenue__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>4-digit fiscal year (eg, 2016)</description>
    <inlineHelpText>4-digit fiscal year (eg, 2016)</inlineHelpText>
    <label>Fiscal Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>