force-app/main/default/objects/Revenue__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Converts Fiscal Period / Fiscal Year to date (assuming first day of the month)</description>
    <formula>DATE(if(Fiscal_Period__c &lt; 4, Fiscal_Year__c - 1,Fiscal_Year__c),if(Fiscal_Period__c &lt; 4, Fiscal_Period__c + 9, Fiscal_Period__c -3),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converts Fiscal Period / Fiscal Year to date (assuming first day of the month)</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>