force-app/main/default/objects/Revenue__c/fields/Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_Revenue__c</fullName>
    <description>net revenue for the month (including credits)</description>
    <inlineHelpText>net revenue for the month (including credits)</inlineHelpText>
    <label>Net Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>