force-app/main/default/objects/Revenue__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>Platform that the revenue is associated with</description>
    <inlineHelpText>Platform that the revenue is associated with</inlineHelpText>
    <label>Product Line</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>