force-app/main/default/objects/Revenue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>the type of revenue (recurring or professional services)</description>
    <inlineHelpText>the type of revenue (recurring or professional services)</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>