force-app/main/default/objects/Revenue__c/validationRules/Fiscal_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>Fiscal_Period</fullName>
    <active>true</active>
    <description>Period must be in the range {1 .. 12}</description>
    <errorConditionFormula>OR( Fiscal_Period__c &lt; 1 , Fiscal_Period__c &gt; 12)</errorConditionFormula>
    <errorMessage>Fiscal Period must be in the range {1 .. 12} where 1=Oct and 12=Sept</errorMessage>
</ValidationRule>